--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -127,12 +127,10 @@
         <div class="container">
             <h3 class="text-center text-uppercase fw-bold mb-4"><span>auspicious</span> Opening & Strength</h3>
             <div class="row text-center">
-                <div class="col-6">
-                    <img src="{% static 'assets/landing/assets/img/1.png' %}" alt="" class="img-fluid">
+                <div class="col-12">
+                    <img src="{% static 'assets/landing/assets/img/Auspicious_Map.jpg' %}" alt="" class="img-fluid">
                 </div>
-                <div class="col-6">
-                    <img src="{% static 'assets/landing/assets/img/2.png' %}" alt="" class="img-fluid">
-                </div>
+                
             </div>
         </div>
     </div>
