--- a/auspicious/templates/page/telecom-project.html
+++ b/auspicious/templates/page/telecom-project.html
@@ -67,7 +67,7 @@
                                         <a href="{% url 'project_details' slug=project.slug %}">
                                             <button type="button" class="btn btn-outline-primary">
                                                 <i class="fa fa-eye" aria-hidden="true">
-                                                </i>
+                                                <<button type="button" class="btn btn-outline-primary"><i class="fa fa-eye" aria-hidden="true"></i></button>/i>
                                             </button>
                                         </a>
                                     </td>
