--- a/static/assets/landing/assets/css/custom.css
+++ b/static/assets/landing/assets/css/custom.css
@@ -23,3 +23,24 @@ ul {
     height: 200px;
     weight:200px;
 } */
+
+.text-deco-none {
+    text-decoration: none !important;
+}
+
+.hide {
+    display: none !important;
+}
+
+.m-l-4 {
+    margin-left: 4px !important;
+}
+.m-l-6 {
+    margin-left: 6px !important;
+}
+.m-l-8 {
+    margin-left: 8px !important;
+}
+.m-l-10 {
+    margin-left: 10px !important;
+}
