--- a/dashboard/templates/dashboard/snippets/list-common.html
+++ b/dashboard/templates/dashboard/snippets/list-common.html
@@ -208,6 +208,10 @@
 
 {% endif %}
 
+{% if not delete_url == None and can_delete == True %}
+{% include 'dashboard/snippets/delete-modal.html' %}
+{% endif %}
+
 {% endblock %}
 
 {% block additional_js %}
